scrool overlap partially fixed

--- a/src/assets/styles/layout/_singleAuthor.scss
+++ b/src/assets/styles/layout/_singleAuthor.scss
@@ -5,20 +5,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   .container {
     width: 75%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: -1;
+
     .card {
       width: 30%;
       height: 60%;
       margin-right: 20px;
     }
+
     h4 {
       padding-bottom: 30px;
       text-align: center;
     }
   }
+}
+
+.books {
+  background-color: dodgerblue;
 }
